# banim

./: .gitignore  CMakeLists.txt  README.md  USAGE_GUIDE.md  setup.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
examples/: architecture_demo.cpp  block_demo.cpp  demo.cpp  example.cpp  grid_demo.cpp  logic_gates_demo.cpp  wire_demo.cpp
include/banim/: animatable.h  animations.h  arch_components.h  block.h  easing.h  grid.h  init.h  logic_gates.h  port_interface.h  renderer.h  scene.h  shapes.h  style.h  text.h  timeline.h  wire.h  wires.h
src/: animatable.cpp  animations.cpp  arch_components.cpp  block.cpp  easing.cpp  init.cpp  logic_gates.cpp  renderer.cpp  scene.cpp  shapes.cpp  style.cpp  text.cpp  wire.cpp  wires.cpp
